--- a/signup_signin/src/App.css
+++ b/signup_signin/src/App.css
@@ -1,38 +1,109 @@
-.App {
+.signup{
+  width: 40%;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  padding: 20px 30px;
+  margin: 5% 33%;
+  border-radius: 5px;
   text-align: center;
-}
+  background-color: white;
+  
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.signup .input{
+  width: 70%;
+  padding: 10px;
+  font-size: 17px;
+  font-weight: 550;
+  margin: 5px;
+  border: none;
+  border-bottom: 1px solid gray;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.signup1{
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+  background-image: url(https://assets.interntheory.com/creative/Web-Banner.jpg);
+  background-size: cover;
+  
+}
+.btn{
+  width: 74%;
+  padding: 10px;
+  margin: 10px;
+  color: red;
+  background-color: rgb(238, 234, 234);
+  border: 1px solid red;
+  font-size: 20px;
+}
+.account_already{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  margin-top: -6%;
+}
+.loginfacebook{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap:20px;
+  background-color: #4267B2;
+  width: 80%;
+  margin:auto;
+  border-radius: 5px;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+/* .loginfacebook h3{
+  text-decoration: none;
+} */
+.logingoogle{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap:20px;
+  background-color: #087CDD;
+  width: 80%;
+  margin:10PX auto;
+  border-radius: 5px;
+  color: white;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.fa-brands{
+  font-size: 25PX;
+}
+/* ......................... */
+.login_form{
+  width: 30%;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  padding: 20px 30px;
+  margin: 5% 30%;
+  border-radius: 5px;
+  text-align: center;
+  background-color: white;
+}
+.email,.password{
+  width: 70%;
+  padding: 10px;
+  margin: 5px;
+  font-size: 17px;
+  font-weight: 550;
+  border: none;
+  border-bottom: 1px solid gray;
+}
+.submit_btn{
+  width: 74%;
+  padding: 10px;
+  margin: 10px;
+  color: red;
+  background-color: rgb(238, 234, 234);
+  border: 1px solid red;
+  font-size: 20px;
+}
+.login1{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+  background-image: url(https://assets.interntheory.com/creative/Web-Banner.jpg);
+  background-size:cover;
+  
 }
